# nova-terminal

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: release.yml
assets/: fangs.icns
docs/: config.example  handoff-polish.md  plan.md  spec.md
packaging/macos/: fangs.rb
scripts/: macos-icon.sh
src/: ai_block.c  cmdblocks.c  cmdblocks.h  config.c  config.h  layout.c  layout.h  main.c  pane.c  pane.h  pty.c  pty.h  session.c  session.h  ui_effects.c  ui_effects.h  ui_inline.c  ui_settings.c  ui_sidebar.c  ui_sidebar.h  ui_theme.c  ui_theme.h  ui_toast.c  ui_toast.h
tests/: ai_block_tests.c  install_script_tests.sh  macos_app_install_docs_tests.sh  toast_tests.c  ui_theme_tests.c
